tests/snapshots/serde__display_dataview_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new ArrayBuffer(8, { maxByteLength: 16 }))"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 16 });
new DataView(v0)
