tests/snapshots/serde__display_dataview_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new ArrayBuffer(2, { maxByteLength: 10 }), 0, 1)"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
new DataView(v0, 0, 1)
