tests/snapshots/serde__display_dataview_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new Uint8Array([1, 2]).buffer)"
---
new DataView(new Uint8Array([
  0x01, 0x02,
]).buffer)
