tests/snapshots/serde__display_dataview_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new ArrayBuffer(8))"
---
new DataView(new ArrayBuffer(8))
