tests/snapshots/serde__display_dataview_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new Uint8Array([0, 0, 0]).buffer)"
---
new DataView(new ArrayBuffer(3))
