tests/snapshots/serde__display_date_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Date(8640000000000000)"
---
new Date(8640000000000000)
