tests/snapshots/serde__display_dense_array_circular_self.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst arr = [undefined]; arr[0] = arr; arr"
---
const v0 = [
  undefined /* circular */,
];
v0[0] = v0;
v0
