tests/snapshots/serde__display_dense_array_with_object.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n[1, { a: true }]"
---
[
  1,
  {
    "a": true,
  },
]
